--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -3,7 +3,7 @@ name: Deploy Frontend
 on:
   push:
     branches:
-      - main  # oder Ihren Haupt-Branch
+      - master  # oder Ihren Haupt-Branch
 
 jobs:
   deploy:
